<resources>
	<string name="app_name">My App Portfolio</string>

	<string name="hello_world">Hello world!</string>
	<string name="action_settings">Settings</string>
	<string name="spotify_streamer">Spotify streamer</string>
	<string name="scores_app">SCORES APP</string>
	<string name="library_app">LIBRARY APP</string>
	<string name="capstone_my_own_app">CAPSTONE: MY OWN APP</string>
	<string name="xyz_reader">XYZ READER</string>
	<string name="build_it_bigger">BUILD IT BIGGER</string>
	<string name="this_button_will_launch_spotify_streamer">This button will launch spotify
		streamer!
	</string>
	<string name="this_button_will_launch_football_scores_app">This button will launch football
		scores app!
	</string>
	<string name="this_button_will_launch_library_app">This button will launch library app!</string>
	<string name="this_button_will_launch_build_it_bigger_app">This button will launch build it
		bigger app!
	</string>
	<string name="this_button_will_launch_xyz_reader_app">This button will launch XYZ reader app!
	</string>
	<string name="this_button_will_launch_capstone_app">This button will launch capstone app!
	</string>
</resources>
