<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
                android:gravity="center"
                android:orientation="vertical"
                >
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="My Nanodegree Apps!"
              android:textSize="30sp"
              android:layout_marginBottom="10dp"
    />

    <Button
        android:text="@string/spotify_streamer"
        android:id="@+id/button_spotify"
        style="@style/button"/>
    <Button
        android:text="@string/scores_app"
        android:id="@+id/button_scores"
        style="@style/button"/>
    <Button
        android:text="@string/library_app"
        android:id="@+id/button_library"
        style="@style/button"/>
    <Button
        android:text="@string/build_it_bigger"
        android:id="@+id/button_build_it_bigger"
        style="@style/button"/>
    <Button
        android:text="@string/xyz_reader"
        android:id="@+id/button_xyz_reader"
        style="@style/button"/>
    <Button
        android:text="@string/capstone_my_own_app"
        android:id="@+id/button_capstone"
        style="@style/button"
        android:background="@android:color/holo_red_dark"
        android:textColor="@android:color/white"/>
</LinearLayout>
